--- a/.ideavimrc
+++ b/.ideavimrc
@@ -10,17 +10,22 @@ set incsearch
 
 " extensions
 set highlightedyank
+set surround
+set easymotion
+
+nnoremap d "_d
+vnoremap d "_d
 
 noremap <leader>Q :action CloseAllEditors<cr>
 noremap <leader>q :action CloseEditor<cr>
-noremap <leader>ws :action SplitHorizontally<cr>
-noremap <leader>wv :action SplitVertically<cr>
+noremap <leader>wj :action SplitHorizontally<cr>
+noremap <leader>wk :action SplitVertically<cr>
 noremap <leader>wc :action Unsplit<cr>
 noremap <leader>wh :action NextSplitter<cr>
 noremap <leader>wl :action PrevSplitter<cr>
 noremap <leader>h :action NextTab<cr>
 noremap <leader>l :action PreviousTab<cr>
 noremap <leader>r :action RenameElement<cr>
-noremap <leader>m :action Move<cr>
+noremap <leader>f :action FindInPath<cr>
 " Use Jupyter Notebook run shortcut, Ctrl+Enter
 noremap <C-Enter> :action Run<cr>
